k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: darkwing
  labels:
    app.kubernetes.io/name: darkwing
    app.kubernetes.io/part-of: darkwing
