k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: darkwing
  labels:
    app.kubernetes.io/name: kafka
    app.kubernetes.io/component: messaging
    app.kubernetes.io/part-of: darkwing
spec:
  selector:
    app.kubernetes.io/name: kafka
  ports:
    - name: internal
      port: 9093
      targetPort: 9093
