k8s/kafka-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: darkwing
  labels:
    app.kubernetes.io/name: kafka-ui
    app.kubernetes.io/component: messaging
    app.kubernetes.io/part-of: darkwing
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: kafka-ui
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30081
